[package]
name = "Maintain-Tools"
version = "0.0.0"
description = "An operation and maintenance tool"
authors = ["kkem"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.11"
regex = {}
ssh2 = {}
lazy_static = {}
toml = {}
dotenv = {}
tokio = { version = "1.35", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
