[package]
name = "Maintain-Tools"
version = "0.0.0"
description = "An operation and maintenance tool"
authors = ["kkem"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.11"
regex = "1.10.2"
ssh2 = "0.9.4"
lazy_static = "1.4.0"
toml = "0.8.8"
dotenv = "0.15.0"
tokio = { version = "1.35", features = ["full"] }
log = "0.4.20"
log4rs = "1.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
